menu-assignment-finished

--- a/assignments/menu/menu-css/menu-style.css
+++ b/assignments/menu/menu-css/menu-style.css
@@ -17,7 +17,7 @@ header{
     
 }
 body{
-    background-color:white;
+    background-color:gainsboro;
     padding: 5px;
     text-align: center;
     font-size: 15px;
