--- a/assignments/header/footer/menu-css/menu-style.css
+++ b/assignments/header/footer/menu-css/menu-style.css
@@ -2,59 +2,44 @@
   font-family: "orbitron", sans-serif;
 }
 header {
-  background-color: white;
-  padding: 1rem;
-  text-align: right;
-  font-size: 15px;
-  color: black;
-  padding-bottom: 7%;
-}
-header {
   border: 2px solid #000;
   color: #000;
   margin-top: 1rem;
   margin-bottom: 1rem;
   height: 15rem;
   box-shadow: inset gray 0px 0px 60px -12px;
+  background-color: white;
+  font-size: 1rem;
+  padding: 1rem;
+  text-align: right;
+  padding-bottom: 7%;
 }
 header li {
   background: white;
-  padding: 5px;
-  margin: 12px;
+  padding: 0.3125rem;
+  margin: 0.75rem;
   width: 40%;
   height: 0;
   /* margin-top: 1rem; */
   /* line-height: 1rem; */
   color: #000;
   font-weight: bold;
-  font-size: 16px;
-  text-align: left;
-}
-header {
-  background-color: white;
   font-size: 1rem;
+  text-align: left;
 }
 header a:hover {
   background-color: black;
   color: chartreuse;
 }
 body {
-  background-color: gainsboro;
-  padding: 5px;
-}
-body {
   border: 2px solid #000;
-  color: black;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
   box-shadow: inset gray 0px 0px 60px -12px;
+  background-color: gainsboro;
+  padding: 0.3125rem;
 }
 .flex-container {
   display: flex;
-}
-.flex-container ul {
-  list-style-type: none;
-  text-decoration: underline;
-  border: 2px solid black;
 }
 .flex-container ul {
   display: inline-flex;
@@ -65,11 +50,12 @@ body {
   padding: 2%;
   margin: 6%;
   list-style: none;
-  width: 45%;
+  width: 55%;
+  list-style-type: none;
+  text-decoration: underline;
+  border: 2px solid black;
 }
 .flex-container img {
-  /* margin: 1px; */
-  /* padding: 1px; */
   border-color: transparent;
   width: 28%;
 }
@@ -78,42 +64,66 @@ body {
 }
 main {
   background-color: white;
-  padding: 0px;
-  text-align: center;
-  font-size: 15px;
-  color: black;
-}
-main {
   border: 2px solid #000;
-  color: #000;
-  margin-bottom: 15px;
-  height: 92rem;
+  margin-bottom: 1rem;
+  height: 80rem;
   box-shadow: inset gray 0px 0px 60px -12px;
+  font-style: oblique;
 }
-.main,
-h3 {
-  display: flex;
-  flex-direction: row;
+.catpfp img {
+  display: block;
+  flex-direction: column;
   flex-wrap: wrap;
   flex-flow: row wrap;
-  justify-content: right;
-  list-style: none;
-}
-.main,
-h3 {
-  background: transparent;
-  padding: 1rem;
+  justify-content: left;
   margin: 1rem;
-  height: 1rem;
-  margin-top: 3rem;
-  line-height: 1rem;
-  color: #000;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: left;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  border: black solid;
 }
-.main,
-h4 {
+.userinfo p{
+  list-style: none;
+  background: transparent;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  line-height: 1rem;
+  font-weight: bold;
+  font-size: 1.3rem;
+  text-align: left;
+  font-style: oblique;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color:white;
+}
+.flexy {
+  display: flex;
+  flex-direction: row;
+}
+.item {
+  width: 40%;
+}
+.stars img{
+  margin-top: -7rem;
+  margin-bottom: 2rem;
+  margin-right: -5rem;
+  float: right;
+}
+.ovalstar img{
+  display: block;
+  flex-direction: column;
+  margin: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+}
+.title h1{
+  padding: 0.8rem;
+  text-align: left;
+  font-weight: 900;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.bio p{
   display: block;
   flex-direction: column;
   flex-wrap: wrap;
@@ -126,27 +136,36 @@ h4 {
   width: 90%;
   height: 10%;
   font-size: 2rem;
+  border-bottom: 5px solid black;
 }
-.main,
-img {
-  display: block;
-  flex-direction: column;
-  flex-wrap: wrap;
-  flex-flow: row wrap;
-  justify-content: left;
-  padding: 1rem;
-  margin: 2rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  margin-left: 1rem;
-  border: black solid;
-}
-menu {
-  background-color: white;
+.yt-text {
+  background: transparent;
   padding: 0px;
   text-align: center;
-  font-size: 15px;
-  color: black;
+  color: white;
+  font-size: x-large;
+  font-weight: 600;
+  font-style: oblique;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.verve img{
+  display: inline-flex;
+  flex-flow: row wrap;
+  margin: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  border: 2px solid; 
+}
+.spotify-text a{
+  background: transparent;
+  padding: 0px;
+  text-align: center;
+  color: white;
+  font-size: x-large;
+  font-weight: 600;
+  font-style: oblique;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 menu {
   border: 2px solid #000;
@@ -154,7 +173,10 @@ menu {
   margin-bottom: 10px;
   height: 3rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  background-color: white;
+  text-align: center;
+  font-size: 1rem;
 }
 .menu,
 li {
@@ -175,7 +197,7 @@ menu {
   flex-direction: row;
   flex-wrap: wrap;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 0rem;
   margin: 0rem;
   list-style: none;
@@ -185,24 +207,22 @@ menu {
   color: chartreuse;
 }
 footer {
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  font-size: 19px;
-  color: #000;
-}
-footer {
   border: 2px solid #000;
-  color: black;
   margin-top: 1rem;
   margin-bottom: 5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #000;
 }
 footer a:hover {
   background-color: black;
   color: chartreuse;
 }
+.shadow
 @media (min-width: 1041px) {
   header {
     border: 2px solid #000;
@@ -212,5 +232,18 @@ footer a:hover {
     /* height: 15rem; */
     box-shadow: inset gray 0px 0px 60px -12px;
   }
-  @media (max-width: 910px)
-}
+  @media (max-width: 910px) {
+    header {
+      border: 2px solid #000;
+      color: #000;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      /* height: 15rem; */
+      box-shadow: inset gray 0px 0px 60px -12px;
+    }
+    @media (max-width: 734px) {
+      margin-top: -7rem;
+      margin-bottom: 2rem;
+      margin-right: -35%;
+      float: right;
+    }
